--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0",
     "bootstrap-datepicker": "^1.7.1",
-    "chart.js": "^2.7.1",
+    "chart.js": "^2.7.2",
+    "chartjs": "^0.3.24",
     "datatables": "^1.10.13",
     "easy-pie-chart": "^2.1.7",
     "file-loader": "^1.1.5",
